src/test/ui/consts/const-block-non-item-statement-3.stderr
error[E0658]: let bindings in constants are unstable (see issue #48821)
  --> $DIR/const-block-non-item-statement-3.rs:11:31
   |
LL | type Array = [u32; {  let x = 2; 5 }];
   |                               ^
   |
   = help: add #![feature(const_let)] to the crate attributes to enable

error[E0658]: statements in constants are unstable (see issue #48821)
  --> $DIR/const-block-non-item-statement-3.rs:11:31
   |
LL | type Array = [u32; {  let x = 2; 5 }];
   |                               ^
   |
   = help: add #![feature(const_let)] to the crate attributes to enable

error[E0658]: let bindings in constants are unstable (see issue #48821)
  --> $DIR/const-block-non-item-statement-3.rs:11:20
   |
LL | type Array = [u32; {  let x = 2; 5 }];
   |                    ^^^^^^^^^^^^^^^^^
   |
   = help: add #![feature(const_let)] to the crate attributes to enable

error[E0658]: statements in constants are unstable (see issue #48821)
  --> $DIR/const-block-non-item-statement-3.rs:11:20
   |
LL | type Array = [u32; {  let x = 2; 5 }];
   |                    ^^^^^^^^^^^^^^^^^
   |
   = help: add #![feature(const_let)] to the crate attributes to enable

error: aborting due to 4 previous errors

For more information about this error, try `rustc --explain E0658`.
